creating sample page and link and flash message

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "agiratech/blog",
+    "name": "agiratech/symfony-learn",
     "license": "proprietary",
     "type": "project",
     "autoload": {
